--- a/index.html
+++ b/index.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hoja_vida</title>
+	<title>Comenzando con la fotografía</title>
+		<meta charset="utf-8">
+	<link rel="stylesheet" href="css/estilos.css">
+	<meta name="viewport" content="width=device-width,user-scalable=yes">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
-<body>
 <header>
-<img src="images/logolhhr.png" alt="Logo" title="Hellen">
-	<h1>
-		HOJA DE VIDA
-	</h1>
+	<h1 class="h1_cabecera">Comenzando con la fotografía</h1>
+	<ul>
+		<li><a href="index.html">Inicio</a></li>
+		<li><a href="pages/paisajes.html">Paisajes</a></li>
+		<li><a href="pages/retratos.html">Retratos</a></li>
+	</ul>
 </header>
 <body>
-<br>
-<h2>DATOS PERSONALES</h2>
-<h3> Nombres: Luz Helena Heredia.</h3>
-<h3> Fecha de Nacimiento: 22 de enero de 1980.</h3>
-<h3> Lugar de Nacimiento: Bogotá Colombia.</h3>
-<br>
-<a title="Home" href="Index.html">Inicio</a> | <a title="Educación" href="pages/educacion .html">Educación</a> | <a title="Experiencia" href="pages/experiencia.html">Experiencia</a>
-<br>
-<h2>INFORMACION PERSONAL</h2>
-<img src="images/foto_hv.jpg" alt="foto" title="foto de Hellen">
-<br>
-<h2>PERFIL</h2>
-<p title="Párrafo sobre el perfil de Hellen">
-Experta en calidad de los sistemas de información, con conocimientos en bases de datos y desarrollo de aplicaciones.
-<br>
-Experiencia en procesos, estrategias empresariales, indicadores de gestión y de productividad.
-</p>
-<h3><strong>Idiomas:</strong> </h3>
-<ul>
-<li> Inglés </li>
-<li> Francés </li>
-<li> Alemán </li>
-</ul>
-</body>
-<footer align="center">
-<h3 align="center">Contacto</h3>
-<br>
- <strong> Correo:</strong>luzhelena@gmail.com
-<br>
-<strong>Telefono:</strong>l57 2030370
+
+<div class="contenido">
+			<div class="c1">
+					<img class="img_c1" src="images/mila_bancas2.jpg">
+			</div>
+			<div class="c2">
+							<div class="c21">
+										<a href="pages/paisajes.html"><img id="Ima_Sec_Izq" src="images/nina_rezando.png"></a>
+										<a href="pages/paisajes.html"><h4 align="center">Paisajes</h4></a>
+
+							</div>
+							<div class="c22">
+										<a href="pages/retratos.html"><img id="Ima_Sec_der" src="images/orarL.png"></a>
+										<a href="pages/retratos.html"><h4 align="center">Retratos</h4></a>
+							</div>
+			</div>
+</div>
+<footer class="pie">
+	<div class="contacto">
+					<h1> Contactos</h1>
+					<h6>luzhelena.heredia@gmail.com</h6>
+					<h6>Cr 24A 35 26</h6>
+					<h6>Tel: 2030370</h6>
+			</div>
+			<div class="Terminos">
+				<h1>Términos</h1>
+					<h6>Conoce nuestros términos y condiciones</h6>
+					<h6>aporta</h6>
+			</div>
+			<div class="Redes">
+				<h1>Redes</h1>
+					<h6>comparte en nuestras redes</h6>
+					<h6><img src="images/face_p.png">facebook</h6>
+					<h6><img id="ima_redes" src="images/whats.jpg">whatsupp</h6>
+					<h6><img id="ima_redes" src="images/twee.png">twee</h6>
+			</div>
+			<div class="derechos">
+				<h1>Derechos</h1>
+				<h6>Luz Helena ©</h6>
+				<h6>copyright - 2020</h6>
+			</div>
 </footer>
+</body>
 </html>
